# chunkah

./: .gitignore  .packit.yaml  Cargo.toml  Containerfile  Justfile  README.md
.github/workflows/: ci.yml
packaging/: chunkah.spec
src/: cmd_build.rs  scan.rs
src/components/: bigfiles.rs  mod.rs  rpm.rs  xattr.rs
tests/e2e/: run.sh
tests/fixtures/: empty.image-config.json  fedora.qf  rpmdb.sqlite
tools/: create-archives.sh  release.py
