[package]
name = "chunkah"
version = "0.2.0"
description = "An OCI building tool for content-based layers"
authors = ["Jonathan Lebon <jonathan@jlebon.com>"]
repository = "https://github.com/coreos/chunkah"
license = "MIT OR Apache-2.0"
edition = "2024"
# Automatically bumped to match RHEL 9; see .github/workflows/msrv-bump.yml
rust-version = "1.88.0"
publish = false

[dependencies]
anyhow = "1"
camino = { version = "1", features = ["serde1"] }
cap-std-ext = { version = "5", default-features = false, features = ["fs_utf8"] }
chrono = "0.4"
clap = { version = "4", default-features = false, features = ["derive", "std", "help", "usage", "error-context", "env"] }
ctrlc = "3.5.2"
flate2 = "1"
indexmap = "2"
libc = "0.2"
ocidir = "0.7"
rpm-qa = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
fs-set-times = "0.20.3"
maplit = "1"
tempfile = "3"
